--- a/WeatherApp/app/src/main/res/layout/activity_tomorrow.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_tomorrow.xml
@@ -2,12 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/back_1"
-    tools:context=".MainActivity">
+    android:background="@color/back_1">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,26 +15,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/day"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Today"
-                android:textColor="@color/white"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginTop="16dp"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:id="@+id/back_Btn"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/back_1">
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sat April 13"
-                android:textColor="@color/white"
-                android:textAlignment="center"
-                android:textSize="14sp"
-                android:layout_marginTop="8dp"/>
+                <ImageView
+                    android:id="@+id/backBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@drawable/back" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,40 +42,55 @@
                 android:background="@drawable/background_2"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="190dp"
-                    android:layout_margin="16dp"
-                    android:src="@drawable/windy" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/weather_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Windy"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="0dp"
+                        android:layout_height="180dp"
+                        android:layout_margin="16dp"
+                        android:layout_weight="0.5"
+                        tools:srcCompat="@drawable/windy" />
 
-                <TextView
-                    android:id="@+id/temp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="20°"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="40sp" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/temp_low_high"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="H:25 L:17"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
+                        <TextView
+                            android:id="@+id/tomorrow"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Tomorrow"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/white"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tempTomorrow"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="20°"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/white"
+                            android:textSize="40sp" />
+
+                        <TextView
+                            android:id="@+id/condition"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Windy"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/white"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -180,70 +191,12 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/location"
-                    android:layout_width="258dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Location"
-                    android:textColor="@color/yellow" />
-
-                <Button
-                    android:id="@+id/nextBTN"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="next 3 days"
-                    android:textColor="@color/white" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal">
-
-<!--                <Button-->
-<!--                    android:id="@+id/myLocation"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="#0000000"-->
-<!--                    android:text="My Location"-->
-<!--                    android:textColor="@color/white" />-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/setLocation"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="#0000000"-->
-<!--                    android:text="Set Location"-->
-<!--                    android:textColor="@color/white" />-->
-
-
-
-            </LinearLayout>
-
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/hourlyView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                />
+                android:id="@+id/view2"
+                android:layout_weight="1"
+                android:nestedScrollingEnabled="true"/>
 
         </LinearLayout>
     </ScrollView>
