--- a/WeatherApp/app/src/main/res/layout/activity_tomorrow.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_tomorrow.xml
@@ -31,7 +31,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@drawable/back" />
+                    android:src="@drawable/back" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,7 +53,7 @@
                         android:layout_height="180dp"
                         android:layout_margin="16dp"
                         android:layout_weight="0.5"
-                        tools:srcCompat="@drawable/windy" />
+                        android:src="@drawable/windy" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -138,7 +138,7 @@
                             android:id="@+id/imageView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/humidity" />
+                            android:src="@drawable/wind" />
 
                         <TextView
                             android:id="@+id/wind_amount"
