--- a/WeatherApp/app/src/main/res/values/colors.xml
+++ b/WeatherApp/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="back_1">#161c2a</color>
-    <color name="back_2">#1a2332</color>
+    <color name="back_1">#160020</color>
+    <color name="back_2">#280039</color>
     <color name="yellow">#fdd020</color>
 </resources>
